--- a/css/style.css
+++ b/css/style.css
@@ -331,9 +331,7 @@ ul{
     color: #28a3eb;
 }
 
-@media only screen 
-	and (max-width:981px) 
-	and (-webkit-min-device-pixel-ratio: 3){
+@media only screen and (max-width:1050px) {
     #header h1{
         text-align: center;
         float: none;
